...
    closeModal()
  }

  const openTaskActions = (task: Task) => {
    showActionSheetWithOptions(
      {
        options: ['Edit task', 'Delete task', 'Cancel'],
        title: task.title,
        cancelButtonIndex: 2,
        destructiveButtonIndex: 1,

        tintColor: colors.primary,
        destructiveColor: colors.destructive,
...
