import { Text } from './ui/text'

export function EmptyTasksState() {
  return (
    <Text className="text-center text-base text-muted dark:text-muted-dark">
      No tasks. Breathe.
    </Text>
  )
}
